# minimal-raft-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
resources/: LESSON.md  README.md
src/: lib.rs  logger.rs  node.rs  raft.rs
src/maelstrom_node/: error.rs  node.rs
src/state_machine/: hash_map_state_machine.rs  mod.rs
