[package]
name = "minimal-raft-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
env_logger = "0.11.8"
log = "0.4.29"
rand = "0.9.2"
serde = { version="1.0.228", features=["derive"] }
serde_json = "1.0.145"
tokio = { version="1.48.0", features=["full"] }
tokio-util = "0.7.18"

[[bin]]
name = "echo"
path = "src/bin/echo.rs"

[[bin]]
name = "broadcast"
path = "src/bin/broadcast.rs"

[[bin]]
name = "g-set"
path = "src/bin/g-set.rs"

[[bin]]
name = "g-counter"
path = "src/bin/g-counter.rs"

[[bin]]
name = "datomic"
path = "src/bin/datomic.rs"

[[bin]]
name = "raft"
path = "src/bin/raft.rs"
